fixed height issue for modal on mobile screen

--- a/src/app/components/room-book/room-book.component.css
+++ b/src/app/components/room-book/room-book.component.css
@@ -1,148 +1,153 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.75);
-    z-index: 400;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.75);
+  z-index: 400;
 }
 
 .booking-box {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 80%;
-    padding: 16px;
-    z-index: 401;
-    background: var(--color-white);
-    border-radius: 8px;
-    box-shadow: var(--bx-shadow-one);
-    overflow-x: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 80%;
+  padding: 16px;
+  z-index: 401;
+  background: var(--color-white);
+  border-radius: 8px;
+  box-shadow: var(--bx-shadow-one);
+  overflow-x: hidden;
 }
 
 .box-header {
-    display: flex;
-    white-space: nowrap;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid var(--border-secondary);
-    color: #999;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
+  display: flex;
+  white-space: nowrap;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--border-secondary);
+  color: #999;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .box-header span {
-    font-size: var(--fs-heading);
+  font-size: var(--fs-heading);
 }
 
 .box-header button {
-    font-size: 18px;
-    color: #999;
+  font-size: 18px;
+  color: #999;
 }
 
 .box-body {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-bottom: 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-bottom: 20px;
 }
 
 .box-body > * {
-    display: flex;
-    gap: 20px;
-    width: 100%;
+  display: flex;
+  gap: 20px;
+  width: 100%;
 }
 
 .box-body [class^="row"] {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .box-body [class^="row"] > * {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .row-3 {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .box-body > * .dropdown {
-    min-width: 100%;
+  min-width: 100%;
 }
 
 .date {
-    display: flex;
-    flex-direction: column;
-    width: 220px;
+  display: flex;
+  flex-direction: column;
+  width: 220px;
 }
 
 .date input {
-    border: 1px solid var(--bg-secondary);
-    padding: 10px;
-    height: 50px;
-    width: 100%;
-    border-radius: 8px;
+  border: 1px solid var(--bg-secondary);
+  padding: 10px;
+  height: 50px;
+  width: 100%;
+  border-radius: 8px;
 }
 
 .attendees {
-    display: flex;
-    flex-direction: column;
-    max-width: 220px;
+  display: flex;
+  flex-direction: column;
+  max-width: 220px;
 }
 
 .attendees input {
-    border: 1px solid var(--bg-secondary);
-    padding: 10px;
-    height: 50px;
-    width: 100%;
-    border-radius: 8px;
+  border: 1px solid var(--bg-secondary);
+  padding: 10px;
+  height: 50px;
+  width: 100%;
+  border-radius: 8px;
 }
 
 .agenda {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 
-    width: 100%;
+  width: 100%;
 }
 
 .agenda textarea {
-    outline: none;
-    border: 1px solid var(--bg-secondary);
-    padding: 10px;
-    border-radius: 8px;
+  outline: none;
+  border: 1px solid var(--bg-secondary);
+  padding: 10px;
+  border-radius: 8px;
 }
 
 .box-footer {
-    display: flex;
-    gap: 10px;
-    justify-content: flex-end;
-    align-items: center;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+  align-items: center;
 }
 
 .actions button {
-    height: 50px;
-    border: 1px solid var(--bg-secondary);
-    padding: 10px 25px;
-    border-radius: 8px;
+  height: 50px;
+  border: 1px solid var(--bg-secondary);
+  padding: 10px 25px;
+  border-radius: 8px;
 }
 
 .actions button:last-child {
-    border: 1px solid var(--color-blue-one);
-    background: var(--color-blue-one);
-    color: var(--color-white);
+  border: 1px solid var(--color-blue-one);
+  background: var(--color-blue-one);
+  color: var(--color-white);
 }
 
 @media (max-width: 960px) {
-    .box-body [class^="row"] > * {
-        width: 100%;
-    }
+  .booking-box {
+    max-height: 600px;
+    overflow-y: scroll;
+  }
 
-    .box-body [class^="row"] {
-        flex-direction: column;
-    }
+  .box-body [class^="row"] > * {
+    width: 100%;
+  }
+
+  .box-body [class^="row"] {
+    flex-direction: column;
+  }
 }
